Remove a stray newline from the Windows version of TestNetscapePlugin

Reviewed by Alexey Proskuryakov.

Fixes <http://webkit.org/b/40728>
plugins/geturlnotify-during-document-teardown.html fails on Windows

* DumpRenderTree/win/TestNetscapePlugin/main.cpp:
(NPP_Destroy): Removed extra newline that the Mac version doesn't
have.

Canonical link: https://commits.webkit.org/52283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61273 268f45cc-cd09-0410-ab3c-d52691b4dbfc